# python-epub3

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.md  tutorial.md
epub3/: __init__.py  epub.py
epub3/extension/: pack.py
epub3/util/: __init__.py  _init_mimetypes.py  file.py  helper.py  pack.py  proxy.py  remap.py  stream.py  template.py  undefined.py  xml.py  xml_plus.py
